# rosters

./: .gitignore  .gitmodules  1l-tools  1l-tools.py  CHANGELOG.md  Cargo.toml  CodeGen.ml  Common.ml  Data.mli  LICENSE  Main.ml  Name.ml  Name.mli  PublishedData.ml  README.html  README.md  README_WINDOWS_GUI.html  README_WINDOWS_GUI.md  Rosters.ml  Rosters.mli  TODO.md  build.rs  dune  dune-project  dune-workspace  example_config.toml  lab-tools.cabal  lab-tools.opam  package.yaml  rosters.opam  setup.py  toml.ml
.github/workflows/: build.yml  workflow.yml
lib/: Cargo.toml
lib/src/: lib.rs
rosters-cli/: Cargo.toml
rosters-cli/src/: main.rs
rosters-gui/: Cargo.toml  build.rs
rosters-lib/: Cargo.toml  example_config.toml
rosters-lib/src/: data.rs  error.rs  lib.rs  pdf.rs  xlsx.rs
rosters-windows-gui/: Cargo.toml  build.rs
rosters-windows-gui/src/: main.rs
src/: AttendanceSheet.ml  AttendanceSheet.mli  CodeGen.ml  CodeGen.mli  Common.ml  Common.mli  Data.ml  Main.ml  Monad.ml  Monad.mli  Monads.ml  Monads.mli  Pdf.ml  Pdf.mli  Record.ml  Record.mli  Roster.ml  Roster.mli  Rosters.ml  Transformers.ml  Transformers.mli  TypeClasses.ml  Xlsx.ml  Xlsx.mli  Xlsx.mli.orig  data.rs  dune  dune.linux-static-musl  error.rs  main.rs  pdf.rs  xlsx.rs
