[package]
name = "rosters"
authors = ["Mac Lee"]
version = "1.99.5"
edition = "2021"
description = "Generate rosters for 1-series labs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.4", features = ["serde"] }
clap = { version = "4.3.4", features = ["derive", "cargo"] }
csv = "1.2.2"
derive_more = "0.99.17"
directories = "5.0.1"
itertools = "0.10.5"
main_error = "0.1.2"
opener = "0.6.1"
owned_ttf_parser = "0.19.0"
printpdf = "0.5.3"
rand = "0.8.5"
rayon = "1.7.0"
rust_xlsxwriter = "0.41.0"
serde = { version = "1.0.164", features = ["serde_derive"] }
subsetter = "0.1.1"
toml = "0.7.4"

[profile.release]
strip = "symbols"
codegen-units = 1
lto = true
panic = "abort"
incremental = false
