[workspace]
members = ["rosters-lib", "rosters-windows-gui", "rosters-cli"]
default-members = ["rosters-cli"]

[workspace.package]
authors = ["Mac Lee"]
version = "1.99.11"
edition = "2021"
description = "Generate rosters for 1-series labs"
license-file = "LICENSE"
readme = "README.md"

[profile.release]
strip = "symbols"
codegen-units = 1
lto = true
# panic = "abort"
incremental = false
