[workspace]
members = ["rosters-lib", "rosters-windows-gui", "rosters-cli"]
default-members = ["rosters-cli"]
resolver = "2"

[workspace.package]
authors = ["Mac Lee"]
version = "2.1.1"
edition = "2021"
description = "Generate rosters for 1-series labs"
license-file = "LICENSE"
readme = "README.md"

[profile.release]
strip = "symbols"
codegen-units = 1
lto = true
incremental = false
