(lang dune 3.5)
(name rosters)
(version 0.91)

(generate_opam_files true)
(maintainers "Mac Lee")
(homepage "https://github.com/macthecadillac/rosters")

(package
 (name rosters)
 (synopsis "Roster generator for 1-series labs")
 (description "Roster generator for 1-series labs")
 (authors "Mac Lee")
 (depends
  (ocaml (= "4.14.0"))
  (dune (>= "1.5"))
  (containers (= "3.10"))
  (cmdliner (= "1.1.1"))
  (vg (= "0.9.4"))
  (csv (= "2.4"))
  (bos (= "0.2.1"))
  (gg (= "1.0.0"))
  (otoml (= "1.0.3"))
  (uutf (= "1.0.3"))
  (otfm (= "0.4.0"))
  (ppx_blob (= "0.7.2"))))
