[package]
name = "rosters"
version = "0.92.0"
authors = ["Mac Lee <mal004@ucsd.edu>"]
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
# ocaml = "^1.0.0-beta"
# ocaml-interop = "0.8.8"
xlsxwriter = "0.5.0"
derive_more = "0.99"

[build-dependencies]
ocaml-build = {version = "^1.0.0-beta"}

[profile.release]
opt-level = "s"
strip = "symbols"
codegen-units = 1
lto = true
