[package]
name = "rosters-cli"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.17", features = ["derive"] }
main_error = "0.1.2"
rosters-lib = { path = "../rosters-lib" }

[[bin]]
name = "rosters"
path = "src/main.rs"
