[package]
name = "rosters-lib"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.4", features = ["serde"] }
csv = "1.2.2"
derive_more = "0.99.17"
directories = "5.0.1"
itertools = "0.10.5"
main_error = "0.1.2"
owned_ttf_parser = "0.19.0"
printpdf = "0.5.3"
rand = "0.8.5"
rayon = "1.7.0"
rust_xlsxwriter = "0.41.0"
serde = { version = "1.0.164", features = ["serde_derive"] }
subsetter = "0.1.1"
toml = "0.7.4"
