(rule
 (targets librosters.a)
 (deps (glob_files_rec *.rs))
 (action
  (progn
   (run cargo build --manifest-path %{project_root}/../../lib/Cargo.toml --release)
   (run mv %{project_root}/../../lib/target/release/librosters.a librosters.a))))

(executable
 (name Main)
 (public_name rosters)
 (modules Main Roster Common Xlsx Pdf Monad)
 (preprocess (pps ppx_blob))
 (preprocessor_deps
   (file %{project_root}/fonts/Carlito-Regular.otf)
   (file %{project_root}/fonts/Carlito-Bold.otf))
 (libraries bos containers cmdliner csv gg otoml str vg vg.pdf)
 (foreign_archives rosters))
