(rule
  (targets libxlsxwriter.a libz.a)
  (deps ../build/Deps.exe)
  (action
    (ignore-stdout
      (progn
        (run ../build/Deps.exe)))))

(executable
  (name Main)
  (public_name rosters)
  (modules Main Roster Common Xlsx Pdf Monad)
  (preprocess (pps ppx_blob))
  (preprocessor_deps
    (file %{project_root}/fonts/Carlito-Regular.otf)
    (file %{project_root}/fonts/Carlito-Bold.otf))
  ; (libraries bos containers cmdliner ctypes ctypes-foreign csv gg otoml str vg vg.pdf)
  (libraries bos containers cmdliner csv gg otoml str vg vg.pdf)
  (foreign_archives xlsxwriter z))
