(rule
  (targets libxlsxwriter.a libz.a)
  (action
    (ignore-stdout
      (progn
        (run cp -R %{project_root}/../../lib .)
        (chdir lib/zlib
               (progn
                 (run mkdir build)
                 (run /bin/sh configure --static --prefix=./build)
                 (run make -j)
                 (run make install)))
        (chdir lib/xlsxwriter
               (progn
                 (run make -I ../zlib/build/include -j)))
        (run cp lib/xlsxwriter/lib/libxlsxwriter.a libxlsxwriter.a)
        (run cp lib/zlib/build/lib/libz.a libz.a)))))

(executable
  (name Main)
  (public_name rosters)
  (modules Main Roster Common Xlsx Pdf Monad
           ; Type_description Function_description
           )
  (preprocess (pps ppx_blob))
  (preprocessor_deps
    (file %{project_root}/fonts/Carlito-Regular.otf)
    (file %{project_root}/fonts/Carlito-Bold.otf))
  (libraries bos containers cmdliner ctypes ctypes.foreign csv gg otoml otfm str vg vg.pdf)
  ; (flags (:standard -w -9-27))
  ; (ctypes
  ;   (external_library_name libxlsxwriter)
  ;   (build_flags_resolver
  ;     (vendored -force_load))
  ;   (headers (include "xlsxwriter.h"))
  ;   (type_description
  ;     (instance Type)
  ;     (functor Type_description))
  ;   (function_description
  ;     (concurrency sequential)
  ;     (instance Function)
  ;     (functor Function_description))
  ;   (generated_types Types_generated)
  ;   (generated_entry_point C)
  ;   )
  ; (libraries bos containers cmdliner csv gg otoml str vg vg.pdf)
  (foreign_archives xlsxwriter z))
